# envoyer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  flatpak.yml  meson.build  meson_options.txt  rustfmt.toml
.github/workflows/: ci.yml  release.yml  rust-clippy.yml  rust.yml
app/: build.rs  meson.build
app/data/: com.github.matzipan.envoyer.gschema.xml.in
app/data/resources/: meson.build  resources.gresource.xml  welcome_dialog.blp  window.blp
app/lib/litehtml_container/: container.cpp
app/migrations/2020-09-13-131824_create_database/: up.sql
app/migrations/2023-10-29-185220_add_fields_for_imap/: down.sql  up.sql
app/migrations/2023-11-12-160133_make_modification_sequence_nullable/: down.sql  up.sql
app/po/: POTFILES.in
app/src/: config.rs.in  google_oauth.rs  litehtml_callbacks.rs  main.rs  meson.build  schema.rs
app/src/backends/imap/: imap.rs  sync.rs  watch.rs
app/src/controllers/: application.rs  mod.rs
app/src/models/: conversation_messages_list.rs  database.rs  folder_conversations_list.rs  folders_list.rs  identity.rs
app/src/services/: mod.rs  store.rs
app/src/ui/: stylesheet.css  welcome_dialog.rs  window.rs
app/src/ui/window/: dynamic_list_view.rs  folder_conversation_item.rs  folders_list_item.rs  message_view.rs
bindings/vapi/: camel-1.2.vapi  libedataserver-1.2.vapi  libedataserverui-1.2.vapi
build-aux/: com.github.matzipan.envoyer.Devel.json  flatpak.yml
cmake/: ValaPrecompile.cmake
data/: com.github.matzipan.envoyer.desktop  com.github.matzipan.envoyer.desktop.in.in  com.github.matzipan.envoyer.gschema.xml.in  com.github.matzipan.envoyer.metainfo.xml.in.in  envoyer.desktop  pantheon-mail-ng.desktop
data/resources/: meson.build  resources.gresource.xml  window.blp
data/resources/ui/: window.ui
docs/: application_states.md  concepts.md
envoyer/: Cargo.toml  README.md  flatpak.yaml  flatpak.yml
envoyer/migrations/2020-09-13-131824_create_database/: down.sql  up.sql
envoyer/src/: google_oauth.rs  identity.rs  imap.rs  main.rs  models.rs  schema.rs
envoyer/src/controllers/: application.rs
envoyer/src/models/: database.rs  folder_conversations_list.rs  identity.rs  mod.rs
envoyer/src/services/: authorization_code_receiver.rs  mod.rs  store.rs  token_receiver.rs
envoyer/src/ui/: mod.rs  stylesheet.css  welcome_dialog.rs  window.rs
migrations/2020-09-13-131824_create_database/: up.sql
po/: POTFILES.in  ca.po  de.po  eo.po  es.po  fi.po  ko.po  nb.po  pl.po  pt_BR.po  ru.po  zh_CN.po
schemas/: CMakeLists.txt  com.github.matzipan.envoyer.gschema.xml  ro.webmonsters.envoyer.gschema.xml
src/: Application.vala  CMakeLists.txt  Main.vala  application.rs  config.vala  config.vala.cmake  google_oauth.rs  imap.rs  litehtml_callbacks.rs  main.rs  main.vala  schema.rs  session.vala  window.rs
src/Controllers/: Application.vala  Database.vala
src/FutureGranite/: ExpandableItem.vala  HumanDateTime.vala  NestedListBox.vala  SimpleExpandableItem.vala  ThreePane.vala
src/FutureGranite/tests/: HumanDateTimeTest.vala  test-human-date-time.sh
src/MailCoreInterface/: core.cpp  core.vapi  imap.cpp  imap.h  imap.vapi  imap_fetch_data_for_message_part.cpp  imap_fetch_folders.cpp  imap_fetch_messages.cpp  imap_get_message_uids.cpp  imap_html_rendering.cpp  imap_idle_listener.cpp  imap_move_messages.cpp  imap_plain_text_rendering.cpp  imap_store_flags.cpp  pool.cpp  smtp.cpp  smtp.h  smtp.vapi
src/Models/: AccountSummary.vala  Address.vala  Attachment.vala  ConversationThread.vala  Folder.vala  FolderConversationsListModel.vala  IFolder.vala  Identity.vala  Message.vala  Settings.vala  UnifiedFolderChild.vala  UnifiedFolderParent.vala
src/Models/Sidebar/: AccountFoldersParent.vala  UnifiedFolderChild.vala  UnifiedFolderParent.vala
src/Parsers/: IParser.vala  MultipartAlternativeParser.vala  ParserHelper.vala  ParserRegistry.vala  TextHtmlParser.vala  TextPlainParser.vala
src/Services/: Backend.vala  Database.vala  IMessageViewerExtension.vala  Identity.vala  MessageViewerExtensionServer.vala  Session.vala  Settings.vala
src/Util/: Range.vala  SidebarBuilder.vala  ThreadingHelper.vala
src/WebExtensions/: MessageViewerExtension.vala
src/Widgets/: AccountFoldersParentItem.vala  AccountSummariesList.vala  ConversationItem.vala  ConversationViewer.vala  Editor.vala  ExpandableItem.vala  FolderConversationItem.vala  FolderConversationsList.vala  FolderItem.vala  FolderLabel.vala  FolderThreadsList.vala  Gravatar.vala  Headerbar.vala  IFolderItem.vala  IdentityItem.vala  MainWindow.vala  MessageViewer.vala  MessageWebView.vala  NestedListBox.vala  PageItem.vala  PagesList.vala  Sidebar.vala  SimpleExpandableItem.vala  UnifiedFolderChildItem.vala  UnifiedFolderParentItem.vala  Viewer.vala  Window.vala
src/Widgets/Composer/: Headerbar.vala  Window.vala
src/Widgets/Main/: AttachmentItem.vala  ConversationViewer.vala  FolderConversationItem.vala  FolderConversationsList.vala  Headerbar.vala  MessageAddressesList.vala  MessageViewer.vala  MessageWebView.vala  SwipeActionListBoxRow.vala  UnreadDot.vala  UnseenDot.vala  WelcomeDialog.vala  Window.vala
src/Widgets/Main/Sidebar/: AccountFoldersParentItem.vala  FolderItem.vala  IFolderItem.vala  UnifiedFolderChildItem.vala  UnifiedFolderParentItem.vala  Wrapper.vala
src/Widgets/Sidebar/: AccountFoldersParentItem.vala  FolderItem.vala  FolderLabel.vala  IFolderItem.vala  UnifiedFolderChildItem.vala  UnifiedFolderParentItem.vala  Wrapper.vala
src/backends/imap/: imap.rs  mod.rs  sync.rs  watch.rs
src/controllers/: application.rs  mod.rs
src/models/: conversation_messages_list.rs  database.rs  folder_conversations_list.rs  folders_list.rs  identity.rs  mod.rs
src/services/: authorization_code_receiver.rs  store.rs
src/ui/: stylesheet.css  webview_stylesheet.css  welcome_dialog.rs  window.rs
src/ui/window/: conversation_message_item.rs  dynamic_list_view.rs  folder_conversation_item.rs  message_view.rs
test_server/: Cargo.toml
test_server/src/: main.rs
vapi/: libgda-5.0.vapi
