[package]
name = "envoyer"
version = "0.1.0"
authors = ["Andrei Zisu <matzipan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite", "chrono", "r2d2"] }
gtk = { version = "0.9.0", features=["v3_22"] }
gtk-sys = { version = "0.10.0" }
gio = { version = "0.9.0", features=["v2_56"]}
gdk = "0.13.0"
glib = "0.10.0" 
log = "0.4.11"
chrono = "0.4"
url = "2.1.1"
melib = { path = "../../meli/melib", default-features = false, features = ["unicode_algorithms",  "imap_backend", "debug-tracing"] }
isahc = { version = "0.9.11", features = ["json"]}
serde = "1.0.116"
serde_qs = "0.7.0"
serde_derive = "1.0.113"
smallvec = { version = "^1.4.0", features = ["serde", ] }
once_cell = "1.5.2"
serde_json = "1.0.57"
futures = "0.3"
webkit2gtk = "0.11.0"