[package]
name = "envoyer"
version = "0.1.0"
authors = ["Andrei Zisu <matzipan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.0"
diesel = { version = "1.4.4", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"
gtk = { git = "https://github.com/gtk-rs/gtk-rs.git", features=["v3_22"] }
log = "0.4.11"
chrono = "0.4"
#async-std = ""
url = "2.1.1"
melib = { git = "https://github.com/matzipan/meli-envoyer", branch = "envoyer-integration", default-features = false, features = ["unicode_algorithms",  "imap_backend"] }
isahc = { version = "0.9.11", features = ["json"]}
serde = "1.0.116"
serde_qs = "0.7.0"
serde_derive = "1.0.113"
smallvec = { version = "^1.4.0", features = ["serde", ] }
once_cell = "1.5.2"
serde_json = "1.0.57"
futures = "0.3"
webkit2gtk = { git = "https://github.com/gtk-rs/webkit2gtk-rs.git" }
data-encoding = "2.1.1"
chrono-humanize = "0.1.2"